--- a/pages/produtos.module.css
+++ b/pages/produtos.module.css
@@ -2,11 +2,14 @@
   position: sticky;
   top: 0;
   width: 100%;
+  height: 112px;
+}
+.header .container {
   padding: 32px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  transition: all 0.3s ease-in-out;
+  transition: padding 0.3s ease-in-out;
   background-color: white;
 }
 .header .left {
@@ -19,7 +22,7 @@
   align-items: center;
   justify-content: flex-end;
 }
-.header.scrolling {
+.header .container.scrolling {
   padding: 16px 32px;
 }
 
