--- a/components/breadcrumbs.module.css
+++ b/components/breadcrumbs.module.css
@@ -6,7 +6,15 @@
   display: flex;
   align-items: center;
   font-weight: 900;
+  padding-right: 10px;
+  cursor: pointer;
 }
 .link svg {
   margin-right: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    display: none;
+  }
 }
