--- a/components/product.module.css
+++ b/components/product.module.css
@@ -2,6 +2,8 @@
   height: 25vw;
   display: flex;
   flex-direction: column;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 .image {
   flex: 1;
