--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,11 +17,12 @@ a {
 
 :root {
   --secondary: #9CA3AF;
+  --light: #E8E8E8;
 }
 
 ::-webkit-scrollbar {
   width: 10px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--secondary)
+  background-color: var(--secondary);
 }
