--- a/components/cart/cartItem.module.css
+++ b/components/cart/cartItem.module.css
@@ -3,6 +3,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  opacity: 0;
+  transform: translate(0, -50%);
+  transition: all 0.3s ease-in-out;
+}
+.item.active {
+  opacity: 1;
+  transform: translate(0, 0);
 }
 
 .image {
