--- a/components/cart/cart.module.css
+++ b/components/cart/cart.module.css
@@ -8,18 +8,24 @@
 
 .cart {
   width: 480px;
+  max-width: 100vw;
   padding-top: 76px;
   background-color: white;
   border-radius: 0 0 0 24px;
   border: 2px solid var(--light);
-  transition: all 0.3s ease-in-out;
+  transition: padding-top 0.3s ease-in-out;
+  overflow-y: auto;
+  max-height: 100vh;
+}
+.cart::-webkit-scrollbar {
+  display: none;
 }
 .cart.scrolling {
   padding-top: 44px;
 }
 
 .footer {
-  padding: 0 24px 24px 24px;
+  padding: 24px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -28,4 +34,13 @@
 }
 .footer.active {
   transform: translate(0, 0);
+}
+
+@media only screen and (max-width: 480px) {
+  .wrapper, .cart {
+    border-radius: 0;
+  }
+  .button {
+    width: 100%;
+  }
 }
