--- a/components/cart/cartItem.module.css
+++ b/components/cart/cartItem.module.css
@@ -6,10 +6,16 @@
   opacity: 0;
   transform: translate(0, -50%);
   transition: all 0.3s ease-in-out;
+  border-bottom: 1px solid var(--light);
 }
 .item.active {
   opacity: 1;
   transform: translate(0, 0);
+}
+
+.info {
+  display: flex;
+  align-items: center;
 }
 
 .image {
@@ -35,4 +41,18 @@
 .amount {
   width: 16px;
   text-align: center;
+}
+
+@media only screen and (max-width: 480px) {
+  .info {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .image {
+    width: 116px;
+    height: 116px;
+  }
+  .content {
+    padding-top: 16px;
+  }
 }
