Attributes working properly with a questionable slug implementation

--- a/pages/produtos/produto.module.css
+++ b/pages/produtos/produto.module.css
@@ -49,7 +49,39 @@
   padding: 64px 32px 32px 32px;
 }
 
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 64px;
+}
+.actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+.left-button {
+  padding-right: 16px;
+}
+
+@media only screen and (max-width: 1280px) {
+  .footer {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+  .actions {
+    width: 100%;
+  }
+  .left-button {
+    width: 100%;
+  }
+}
+
 @media only screen and (max-width: 768px) {
+  .actions {
+    flex-direction: column;
+  }
   .content {
     flex-direction: column;
   }
@@ -59,5 +91,13 @@
   }
   .content .right {
     flex: unset;
+  }
+  .left-button {
+    padding-right: unset;
+  }
+
+  .right-button {
+    width: 100%;
+    padding-top: 10px;
   }
 }
